--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@egjs/vue-flicking": "^4.1.2",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^1.3.0",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "keen-slider": "^5.5.1",
+    "luxon": "^2.0.1",
+    "nuxt": "^2.15.7",
+    "nuxt-social-meta": "^1.0.0",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
